Export statistics methods to SimulationStatistics class